--- a/views/storage.xml
+++ b/views/storage.xml
@@ -105,7 +105,7 @@
 
                         <notebook>
                             <page string="Stored quantities">
-                                <field name="quantity_ids">
+                                <field name="quantity_ids" readonly="1">
                                     <tree>
                                         <field name="warehouse_id"/>
                                         <field name="amount"/>
@@ -158,7 +158,7 @@
         </record>
 
         <!--Item kanban view-->
-        <record id="item_simple_warehouse_kanban_view" model="ir.ui.view">
+        <record id="item_kanban_view" model="ir.ui.view">
             <field name="name">Item Kanban</field>
             <field name="model">simple_warehouse.item</field>
             <field name="arch" type="xml">
